<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.emerscience.activity.DatosPersonalesActivity"
    tools:showIn="@layout/activity_datos_personales"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/lyGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<LinearLayout
                android:id="@+id/lyPregunta1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtPregunta1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="13dp"
                    android:layout_marginRight="13dp"
                    android:gravity="center"
                    android:text="@string/txtPregunta1"
                    android:textColor="#FE000000" />

                <RadioGroup
                    android:id="@+id/rbgPregunta1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="13dp"
                    android:layout_marginRight="13dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbSi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbSi"
                        android:textColor="#000000" />

                    <RadioButton
                        android:id="@+id/rbNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbNo"
                        android:textColor="#000000" />
                </RadioGroup>

            </LinearLayout>
-->
            <TextView
                android:id="@+id/tvLatitud"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:text="lat"
                tools:visibility="invisible" />

            <TextView
                android:id="@+id/tvLongitud"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:text="longi"
                tools:visibility="invisible" />

            <LinearLayout
                android:id="@+id/lyDatosInformante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtLyDatosInformante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="13dp"
                    android:layout_marginRight="6dp"
                    android:gravity="start"
                    android:text="@string/txtLyDatosInformante"
                    android:textAllCaps="true"
                    android:textColor="#0669B8"
                    android:textColorHint="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true">

                    <EditText

                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/etApellidos"
                        android:inputType="textPersonName|textCapSentences"
                        android:textColor="#000000"
                        android:textColorHint="#8D000000" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputNombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:errorEnabled="true">

                    <EditText

                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/etNombres"
                        android:inputType="textPersonName|textCapSentences"
                        android:textColorHint="#8D000000" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputCedula"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:errorEnabled="true"
                    app:counterEnabled="true">

                    <EditText

                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/etCedula"
                        android:inputType="number"
                        android:textColorHint="#8D000000"
                        android:maxLength="10"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputEdad"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:errorEnabled="true"
                    app:counterEnabled="true">

                    <EditText
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/etEdad"
                        android:inputType="number"
                        android:textColorHint="#8D000000"
                        android:maxLength="3"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/txtSexo"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rbgSexo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMaculino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbMasculino"
                        android:textColor="#8D000000" />

                    <RadioButton
                        android:id="@+id/rbFemenino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/rbFemenino"
                        android:textColor="#8D000000" />

                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputCelular"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:errorEnabled="true"
                    app:counterEnabled="true">

                    <EditText

                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/etCelular"
                        android:inputType="number"
                        android:textColorHint="#8D000000"
                        android:maxLength="10"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputTelefono"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:errorEnabled="true"
                    app:counterEnabled="true">

                    <EditText

                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/etTelefono"
                        android:inputType="number"
                        android:textColorHint="#8D000000"
                        android:maxLength="9"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputCorreo"
                    android:layout_width="310dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:errorEnabled="true">

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/etCorreo"
                        android:inputType="textEmailAddress"
                        android:textColorHint="#8D000000" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txtPersonasInformante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="13dp"
                    android:layout_marginRight="13dp"
                    android:gravity="left"
                    android:text="@string/txtPersonas"
                    android:textAllCaps="false"
                    android:textColor="#000000" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputPersonas"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:errorEnabled="true"
                    app:counterEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/etPersonas"
                        android:inputType="number"
                        android:textColorHint="#8D000000"
                        android:maxLength="2"/>

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/txtSintoma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="13dp"
                    android:layout_marginRight="13dp"
                    android:gravity="left"
                    android:text="@string/txtSintoma"
                    android:textAllCaps="false"
                    android:textColor="#000000" />

                <RadioGroup
                    android:id="@+id/rbgSintomas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="13dp"
                    android:layout_marginRight="13dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbSintomasSi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbSi"
                        android:textColor="#000000" />

                    <RadioButton
                        android:id="@+id/rbSintomasNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbNo"
                        android:textColor="#000000" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyBotones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E9FFFFFF"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnLocalizar"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="GuardarDatosPersonales"
                    android:text="@string/btnSiguiente" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>