<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.emerscience.activity.MenuActivity"
    tools:showIn="@layout/activity_menu">

    <LinearLayout
        android:id="@+id/lyNuevoFormEst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_form_llenar"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@drawable/anim_btn_estudiante" />

            <TextView
                android:id="@+id/txt_nuevo_form"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:text="@string/nuevo_formulario"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyFormFamiliares"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyNuevoFormEst">

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <Button
                android:id="@+id/btnFormFamiliar"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@drawable/anim_btn_familiar" />

            <TextView
                android:id="@+id/txt_editar_form"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:text="@string/editar_formulario"
                android:textColor="@android:color/background_dark"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyNuevoFormEst">

        <TextView
            android:id="@+id/txtTelesalud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_gracias_llenar_encuesta"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txtLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_link"
            android:textColor="@color/azul_app"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- <Button
         android:id="@+id/btn_cerrar_sesion"
         android:layout_width="67dp"
         android:layout_height="62dp"
         android:layout_marginBottom="56dp"
         android:background="@drawable/anim_btn_exit"
         android:onClick="cerrarSesion"
         android:textColor="@android:color/background_dark"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.926"
         app:layout_constraintStart_toStartOf="parent" />

     <TextView
         android:id="@+id/txt_cerrar_sesion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/cerrar_sesion"
         android:textColor="@android:color/background_dark"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn_cerrar_sesion"
         app:layout_constraintHorizontal_bias="0.296"
         app:layout_constraintStart_toStartOf="@+id/btn_cerrar_sesion"
         app:layout_constraintTop_toBottomOf="@+id/btn_cerrar_sesion"
         app:layout_constraintVertical_bias="0.0" />
 -->
</androidx.constraintlayout.widget.ConstraintLayout>
